		generated code).
		Beginning on a mainbus (MainbusComponent), which will forward
		reads and writes to other devices (such as RAM).
20080325	Making the counter in the ReferenceCountable class mutable,
		because const objects also need to be reference countable.
		Attempting to fix a bug related to the integer types passed
		to UnitTest::Assert. (Problem noticed by Hollis Blanchard.)
		Fixing arguments to and return handling of mmap(). (Also
		noticed by Hollis.)
20080328	Making everything build using SunStudio (Sun C++ 5.9).
		Implementing support for Double state variables.
		CPU speed is now a state variable, in CPUComponent.
		Cleaning up the CFLAGS/CXXFLAGS/COPTIM/CWARNINGS mess in the
		configure script and Makefile.skel files; only CXXFLAGS (and
		CXXFLAGSBASE) are used from now on. Also removing some other
		unused legacy stuff from the configure script.
20080329	Minor fixes to make the source code build with a 20080321
		snapshot of GCC 4.4.
20080330	Continuing on the GTKMM GUI (File->Open/Save/Save As show
		file chooser dialogs, and Edit->Undo/Redo execute the "undo"
		and "redo" commands). "File->New from Blank" and "Go/Continue"
		also have bare-bones implementations.
		Continuing on mainbus related things; moving the mips_cpu in
		the testmips machine so that it is placed on the mainbus.
		Adding a MemoryMappedComponent base class, which all memory-
		mapped components should inherit. (The canonical example is
		the RAMComponent class.)
		The mainbus can now forward reads and writes to memory-mapped
		child components.
20080401	Continuing on the mainbus (writing unit tests).
		Reintroduce the 'bool' state variable type.
		Adding a 'writeProtected' state bool for the RAMComponent, to
		emulate ROM behavior in a simple way.
20080402	Creating a src/include/thirdparty directory. Moving debug_new.h
		etc there. Also importing exec_elf.h from NetBSD [HEAD], and
		updating doc/RELEASE.html to reflect the location of thirdparty
		imports.