@@ -193,6 +193,11 @@ Misc.
 Actions and undo/redo
 ---------------------
 
+	[ ]  CompoundAction
+		Contains multiple actions in a row. If ALL actions inside
+		are undoable, then the action is undoable, and executing
+		Undo should undo them all (in reverse order).
+
 	[ ]  ModifyStateAction
 		Undoable by remembering old value of a state variable.
 
@@ -311,9 +316,9 @@ I18N
 
 	[ ]  Unit tests to make sure that unicode strings work as expected.
 	[/]  Use _(x) everywhere for user-readable strings.
-	[ ]  Investigate intltool or gettext or whatever is necessary to get
+	[/]  Investigate intltool or gettext or whatever is necessary to get
 	     it all working. po directories/files, etc.
-	[ ]  Initial translation would be Swedish. LANG=sv_SE.UTF-8 ./gxemul-gui
+	[/]  Initial translation would be Swedish. LANG=sv_SE.UTF-8 ./gxemul-gui
 	[ ]  Use LANG=he_IL.UTF-8 ./gxemul-gui to try a right-to-left languages,
 	     or  LANG=ja_JP.UTF-8 ./gxemul-gui to try an asian language.
 
@@ -586,6 +591,8 @@ Preparation for release 0.5.0
 
 	x) Carefully read through all the documentation, and test all
 	   instructions given there.
+
+	x) Check the Swedish translation.
 
 	x) Take reasonable screenshots of the new version, and place on
 	   the homepage. In particular, take a small thumbnail screenshot,
