@@ -1,0 +1,27 @@
+#
+#  Makefile for GXemul: po/
+#
+
+MOFILES=sv.mo
+
+all: build
+
+build: $(MOFILES)
+
+install: build
+	@echo
+	@echo Installing localized translations...
+	mkdir -p $(TRANSLATIONSPREFIX)/sv/LC_MESSAGES && cp -f sv.mo $(TRANSLATIONSPREFIX)/sv/LC_MESSAGES/gxemul.mo
+
+uninstall:
+	rm -f $(TRANSLATIONSPREFIX)/sv/LC_MESSAGES/gxemul.mo
+
+sv.mo: sv.po
+	msgfmt sv.po -o sv.mo
+
+clean:
+	rm -f *.mo
+
+clean_all: clean
+	rm -f Makefile
+
