@@ -256,6 +256,11 @@
 #include "ComponentFactory.h"
 #include "UnitTest.h"
 
+#ifdef I18N
+#include <libintl.h>
+#define I18N_PACKAGE_NAME	"gxemul"
+#endif
+
 #include <unistd.h>
 
 /// For command line parsing using getopt().
@@ -896,6 +901,13 @@ static bool WithGUI(const char *progname)
 int main(int argc, char *argv[])
 {
 	const char *progname = argv[0];
+
+#ifdef I18N
+	// Initialize stuff to make gettext work:
+	bindtextdomain(I18N_PACKAGE_NAME, NULL);
+	bind_textdomain_codeset(I18N_PACKAGE_NAME, "UTF-8");
+	textdomain(I18N_PACKAGE_NAME);
+#endif
 
 #ifdef WITH_GTKMM
 	// Special case: Gtk::Main must be initialized early on, to make
